--- a/public/index.css
+++ b/public/index.css
@@ -21,3 +21,9 @@
 .couse .price.big {
     font-size: 2.5rem;
 }
+
+.actions {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
