--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -1,6 +1,7 @@
 <h1>Корзина</h1>
 
-{{#if courses.length}}
+<div id="cart">
+  {{#if courses.length}}
   <table>
     <thead>
       <tr>
@@ -16,7 +17,7 @@
         <td>{{title}}</td>
         <td>{{count}}</td>
         <td>
-          <button class="btn btm-small">Удалить</button>
+          <button class="btn btm-small js-remove" data-id="{{id}}">Удалить</button>
         </td>
       </tr>
       {{/each}}
@@ -27,3 +28,4 @@
 {{else}}
   <p>Корзина пуста</p>
 {{/if}}
+</div>
