Added mistakes messages for login/register

--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -27,6 +27,7 @@
   <p><strong>Цена:</strong> <span class="price">{{price}}</span></p>
 
   <form action="/orders" method="POST">
+    <input type="hidden" name="_csrf" value="{{csrf}}">
     <button type="submit" class="btn">Сделать заказ</button>
   </form>
 {{else}}
