added validators and sanitizers for register form

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -40,7 +40,7 @@
             {{/if}}
 
             <h1>Создать аккаунт</h1>
-            <form action="/auth/register" method="POST">
+            <form action="/auth/register" method="POST" novalidate>
                 <div class="input-field">
                     <input id="name" name="name" type="text" class="validate" required>
                     <label for="name">Ваше имя</label>
@@ -67,7 +67,7 @@
 
                 <input type="hidden" name="_csrf" value="{{csrf}}">
 
-                <button class="btn btn-primary" type="submit">Войти</button>
+                <button class="btn btn-primary" type="submit">Зарегистрироваться</button>
             </form>
         </div>
     </div>
